Setup Wurld Challenge

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,5 @@
 {
- "short_name": "Bolt Protect",
- "name": "Bolt Protect - A Campaign by Bolt",
+ "name": "App",
  "icons": [
   {
    "src": "\/android-icon-36x36.png",
@@ -38,9 +37,5 @@
    "type": "image\/png",
    "density": "4.0"
   }
- ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+ ]
 }
